--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Excel Generator</title>
+    <title>5 Why Template</title>
 </head>
 <body>
-    <form method="post">
-        {% csrf_token %}
-        <label for="category">Select Category:</label>
+    <h1>Workflow with Drop-down Menus</h1>
+    <form method="POST">
+        <label>Select Category:</label>
         <select name="category">
             <option value="Why?">Why?</option>
         </select>
         <br>
-        <label for="answer">Select Answer:</label>
-        <select name="answer">
-            <option value="Answer 1">Answer 1</option>
-            <option value="Answer 2">Answer 2</option>
-            <option value="Answer 3">Answer 3</option>
-        </select>
+        <label>Enter Answer:</label>
+        <input type="text" name="answer">
         <br>
-        <button type="submit">Generate Excel</button>
+        <button type="submit">Submit</button>
     </form>
+    <h2>Selected Choices:</h2>
+    {% if result %}
+        <p>{{ result }}</p>
+        {% if count >= 5 %}
+            <p>5 questions reached. Exported to CSV.</p>
+        {% endif %}
+    {% endif %}
 </body>
 </html>
